tests/bad/circular_import_a.mon
import * as b from "./circular_import_b.mon"

{
}
